samples/ut/access/FailPrivate03.err
FailPrivate03.z2(7, 27): error: can't access non public static variable 'data' of class 'Foo'